Remove convenience functions from all files and fix NSGA2 performance

--- a/docs/source/algorithms/moo/nsga2.ipynb
+++ b/docs/source/algorithms/moo/nsga2.ipynb
@@ -186,7 +186,7 @@
    ],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.operators.crossover.pntx import TwoPointCrossover\n",
     "from pymoo.operators.mutation.bitflip import BitflipMutation\n",
     "from pymoo.operators.sampling.rnd import BinaryRandomSampling\n",
