--- a/docs/source/algorithms/moo/rnsga2.ipynb
+++ b/docs/source/algorithms/moo/rnsga2.ipynb
@@ -99,7 +99,7 @@
     "import numpy as np\n",
     "\n",
     "from pymoo.algorithms.moo.rnsga2 import RNSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.visualization.scatter import Scatter\n",
     "\n",
