--- a/docs/source/algorithms/moo/unsga3.ipynb
+++ b/docs/source/algorithms/moo/unsga3.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "from pymoo.algorithms.moo.nsga3 import NSGA3\n",
     "from pymoo.algorithms.moo.unsga3 import UNSGA3\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"ackley\", n_var=30)\n",
