--- a/docs/source/algorithms/soo/isres.ipynb
+++ b/docs/source/algorithms/soo/isres.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.isres import ISRES\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"g1\")\n",
