--- a/docs/source/customization/initialization.ipynb
+++ b/docs/source/customization/initialization.ipynb
@@ -93,7 +93,7 @@
     "import numpy as np\n",
     "\n",
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"zdt2\")\n",
@@ -169,7 +169,7 @@
     "import numpy as np\n",
     "\n",
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.core.evaluator import Evaluator\n",
     "from pymoo.core.population import Population\n",
     "from pymoo.optimize import minimize\n",
