--- a/docs/source/interface/result.ipynb
+++ b/docs/source/interface/result.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "\n",
