--- a/docs/source/interface/termination.ipynb
+++ b/docs/source/interface/termination.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -11,14 +14,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Termination Criterion"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Whenever an algorithm is executed, it needs to be decided in each iteration whether the optimization run shall be continued or not.\n",
     "Many different ways exist of how to determine when a run of an algorithm should be terminated. Next, termination criteria specifically developed for single or multi-objective optimization as well as more generalized, for instance, limiting the number of iterations of an algorithm, are described "
@@ -27,6 +38,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -38,14 +52,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Default Termination ('default')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We have added recently developed a termination criterion set if no termination is supplied to the `minimize()` method:"
    ]
@@ -60,6 +82,9 @@
      "iopub.status.idle": "2022-07-03T13:10:22.222274Z",
      "shell.execute_reply": "2022-07-03T13:10:22.221604Z"
     },
+    "pycharm": {
+     "name": "#%%\n"
+    },
     "tags": []
    },
    "outputs": [
@@ -73,7 +98,7 @@
    ],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"zdt1\")\n",
@@ -88,7 +113,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "This allows you to terminated based on a couple of criteria also explained later on this page. \n",
     "Commonly used are the movement in the design space `f_tol` and the convergence in the constraint `cv_tol` and objective space `f_tol`.\n",
@@ -99,7 +128,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "By default for multi-objective problems, the termination will be set to"
    ]
@@ -113,6 +146,9 @@
      "iopub.status.busy": "2022-07-03T13:10:22.228745Z",
      "iopub.status.idle": "2022-07-03T13:10:22.243722Z",
      "shell.execute_reply": "2022-07-03T13:10:22.242849Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     },
     "tags": []
    },
@@ -132,7 +168,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "And for single-optimization to"
    ]
@@ -146,6 +186,9 @@
      "iopub.status.busy": "2022-07-03T13:10:22.247851Z",
      "iopub.status.idle": "2022-07-03T13:10:22.259701Z",
      "shell.execute_reply": "2022-07-03T13:10:22.258898Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     },
     "tags": []
    },
@@ -166,6 +209,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -174,47 +220,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Number of Evaluations ('n_eval')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The termination can simply be reached by providing an upper bound for the number of function evaluations. Whenever in an iteration, the number of function evaluations is greater than this upper bound the algorithm terminates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:10:22.265947Z",
-     "iopub.status.busy": "2022-07-03T13:10:22.264081Z",
-     "iopub.status.idle": "2022-07-03T13:10:22.413643Z",
-     "shell.execute_reply": "2022-07-03T13:10:22.409842Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==========================================================================\n",
-      "n_gen  |  n_eval  | n_nds  |      igd      |       gd      |       hv     \n",
-      "==========================================================================\n",
-      "     1 |      100 |     15 |  1.3046483561 |  1.5301910684 |  0.000000E+00\n",
-      "     2 |      200 |     18 |  1.3046483561 |  1.5597361058 |  0.000000E+00\n",
-      "     3 |      300 |     17 |  1.0926781978 |  1.4571221998 |  0.000000E+00\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem, get_termination\n",
+    "from pymoo.problems import get_problem\n",
+    "from pymoo.termination import get_termination\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"zdt3\")\n",
@@ -227,85 +260,58 @@
     "               pf=problem.pareto_front(),\n",
     "               seed=1,\n",
     "               verbose=True)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
    "source": [
     ".. _nb_n_gen:"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Number of Generations ('n_gen')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Moreover, the number of generations / iterations can be limited as well. "
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:10:22.421165Z",
-     "iopub.status.busy": "2022-07-03T13:10:22.419385Z",
-     "iopub.status.idle": "2022-07-03T13:10:22.899639Z",
-     "shell.execute_reply": "2022-07-03T13:10:22.898979Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==========================================================================\n",
-      "n_gen  |  n_eval  | n_nds  |      igd      |       gd      |       hv     \n",
-      "==========================================================================\n",
-      "     1 |      100 |     15 |  1.3046483561 |  1.5301910684 |  0.000000E+00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     2 |      200 |     18 |  1.3046483561 |  1.5597361058 |  0.000000E+00\n",
-      "     3 |      300 |     17 |  1.0926781978 |  1.4571221998 |  0.000000E+00\n",
-      "     4 |      400 |     18 |  1.0926781978 |  1.5041146962 |  0.000000E+00\n",
-      "     5 |      500 |     25 |  1.0239187397 |  1.3877741503 |  0.000000E+00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     6 |      600 |     20 |  0.9588697703 |  1.3842885353 |  0.000000E+00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     7 |      700 |     18 |  0.8822332158 |  1.3470794174 |  0.000000E+00\n",
-      "     8 |      800 |     20 |  0.7982671270 |  1.2876737914 |  0.000000E+00\n",
-      "     9 |      900 |     16 |  0.7704665269 |  1.0501584039 |  0.0003646840\n",
-      "    10 |     1000 |     25 |  0.7215684232 |  0.9852689118 |  0.0004092585\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem, get_termination\n",
+    "from pymoo.problems import get_problem\n",
+    "from pymoo.termination import get_termination\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"zdt3\")\n",
@@ -318,55 +324,58 @@
     "               pf=problem.pareto_front(),\n",
     "               seed=1,\n",
     "               verbose=True)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
    "source": [
     ".. _nb_time:"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Based on Time ('time')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The termination can also be based on the time of the algorithm to be executed. For instance, to run an algorithm for 3 seconds the termination can be defined by `get_termination(\"time\", \"00:00:03\")` or for 1 hour and 30 minutes by `get_termination(\"time\", \"01:30:00\")`."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-03T13:10:22.909965Z",
-     "iopub.status.busy": "2022-07-03T13:10:22.904081Z",
-     "iopub.status.idle": "2022-07-03T13:10:25.978198Z",
-     "shell.execute_reply": "2022-07-03T13:10:25.977312Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "119\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem, get_termination\n",
+    "from pymoo.problems import get_problem\n",
+    "from pymoo.termination import get_termination\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"zdt3\")\n",
@@ -381,11 +390,20 @@
     "               verbose=False)\n",
     "\n",
     "print(res.algorithm.n_gen)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -394,14 +412,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Design Space Tolerance ('xtol')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Also, we can track the change in the design space. For a parameter explanation, please have a look at 'ftol'."
    ]
@@ -416,6 +442,9 @@
      "iopub.status.idle": "2022-07-03T13:10:39.498066Z",
      "shell.execute_reply": "2022-07-03T13:10:39.497126Z"
     },
+    "pycharm": {
+     "name": "#%%\n"
+    },
     "tags": []
    },
    "outputs": [
@@ -429,7 +458,7 @@
    ],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.termination.xtol import DesignSpaceTermination\n",
     "from pymoo.termination.robust import RobustTermination\n",
@@ -451,6 +480,9 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    },
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
@@ -459,7 +491,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Objective Space Tolerance ('ftol')\n",
     "\n",
@@ -485,6 +521,9 @@
      "iopub.status.busy": "2022-07-03T13:10:39.501511Z",
      "iopub.status.idle": "2022-07-03T13:10:44.852887Z",
      "shell.execute_reply": "2022-07-03T13:10:44.852263Z"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     },
     "tags": []
    },
@@ -521,7 +560,7 @@
    ],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.termination.ftol import MultiObjectiveSpaceTermination\n",
     "from pymoo.visualization.scatter import Scatter\n",
@@ -566,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
