--- a/docs/source/mcdm/index.ipynb
+++ b/docs/source/mcdm/index.ipynb
@@ -76,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "\n",
     "F = get_problem(\"zdt1\").pareto_front() "
    ]
