--- a/docs/source/misc/convergence.ipynb
+++ b/docs/source/misc/convergence.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.pso import PSO\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"ackley\")\n",
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.pso import PSO\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.core.callback import Callback\n",
     "\n",
