--- a/docs/source/misc/kktpm.ipynb
+++ b/docs/source/misc/kktpm.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.visualization.scatter import Scatter\n",
     "from pymoo.core.evaluator import Evaluator\n",
