--- a/docs/source/problems/constrained/dascmop.ipynb
+++ b/docs/source/problems/constrained/dascmop.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_dascmop:"
@@ -11,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## DAS-CMOP\n",
     "\n",
@@ -32,7 +39,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_dascmop1:"
@@ -40,7 +50,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### DAS-CMOP1 (1)"
    ]
@@ -51,11 +65,14 @@
    "metadata": {
     "code": "usage_problem.py",
     "section": "zdt1",
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"dascmop1\", 1)\n",
@@ -64,7 +81,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### DAS-CMOP7 (12)"
    ]
@@ -73,19 +104,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
-    "from pymoo.factory import get_problem, get_visualization\n",
+    "from pymoo.problems import get_problem\n",
+    "from pymoo.visualization.scatter import Scatter\n",
     "\n",
     "pf = get_problem(\"dascmop7\", 12).pareto_front()\n",
-    "get_visualization(\"scatter\", angle=(45,45)).add(pf, color=\"red\").show()"
+    "Scatter(angle=(45, 45)).add(pf, color=\"red\").show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<sub>Python implementation by [cyrilpic](https://github.com/cyrilpic) based on the [original JAVA code](http://imagelab.stu.edu.cn/Content.aspx?type=content&Content_ID=1310).</sub>"
    ]
