--- a/docs/source/problems/constrained/modact.ipynb
+++ b/docs/source/problems/constrained/modact.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_modact:"
@@ -11,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# MODAct\n",
     "\n",
@@ -41,7 +48,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_modact_cs3:"
@@ -49,7 +59,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### CS3"
    ]
@@ -58,11 +72,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
-    "from pymoo.factory import MODAct\n",
+    "from pymoo.problems.multi import MODAct\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = MODAct(\"cs3\")\n",
@@ -71,7 +88,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### CT1"
    ]
@@ -79,10 +100,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "from pymoo.factory import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = MODAct(\"ct1\")\n",
@@ -91,7 +115,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### CTS4"
    ]
@@ -99,23 +127,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from pymoo.factory import get_problem, get_visualization\n",
+    "\n",
+    "from pymoo.problems.multi import MODAct\n",
+    "from pymoo.visualization.scatter import Scatter\n",
     "\n",
     "pf = np.loadtxt(\"modact-cts3.pf\")\n",
     "\n",
-    "\n",
     "problem = MODAct(\"cts4\", pf=pf)\n",
     "pf = problem.pareto_front()\n",
-    "get_visualization(\"scatter\", angle=(45,45)).add(pf, color=\"red\").show()"
+    "Scatter(angle=(45,45)).add(pf, color=\"red\").show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<sub>Implementation by [the author (cyrilpic)](https://github.com/cyrilpic)."
    ]
