--- a/docs/source/problems/constrained/mw.ipynb
+++ b/docs/source/problems/constrained/mw.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "from pymoo.problems import get_problem\n",
     "from pymoo.util.ref_dirs import get_reference_directions\n",
