--- a/docs/source/problems/multi/osy.ipynb
+++ b/docs/source/problems/multi/osy.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"osy\")\n",
