--- a/docs/source/problems/multi/truss2d.ipynb
+++ b/docs/source/problems/multi/truss2d.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.visualization.scatter import Scatter\n",
     "\n",
     "pf = get_problem(\"truss2d\").pareto_front()\n",
