--- a/docs/source/problems/multi/zdt.ipynb
+++ b/docs/source/problems/multi/zdt.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt1\")\n",
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt2\")\n",
@@ -316,7 +316,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt3\")\n",
@@ -414,7 +414,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt4\")\n",
@@ -513,7 +513,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt5\", normalize=False)\n",
@@ -555,7 +555,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt5\", normalize=False)\n",
@@ -653,7 +653,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"zdt6\")\n",
