--- a/docs/source/visualization/video.ipynb
+++ b/docs/source/visualization/video.ipynb
@@ -84,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"zdt1\")\n",
@@ -130,7 +130,7 @@
    "source": [
     "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
     "from pymoo.core.callback import Callback\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.visualization.pcp import PCP\n",
     "from pyrecorder.recorder import Recorder\n",
