--- a/docs/source/algorithms/soo/ga.ipynb
+++ b/docs/source/algorithms/soo/ga.ipynb
@@ -77,7 +77,7 @@
    ],
    "source": [
     "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "\n",
     "problem = get_problem(\"g1\")\n",
