--- a/docs/source/interface/callback.ipynb
+++ b/docs/source/interface/callback.ipynb
@@ -111,7 +111,7 @@
     "import numpy as np\n",
     "\n",
     "from pymoo.algorithms.soo.nonconvex.ga import GA\n",
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.core.callback import Callback\n",
     "from pymoo.optimize import minimize\n",
     "\n",
