--- a/docs/source/misc/checkpoint.ipynb
+++ b/docs/source/misc/checkpoint.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_checkpoint:"
@@ -11,14 +14,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Checkpoints"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Sometimes, it might be useful to store some checkpoints while executing an algorithm. In particular, if a run is very time-consuming. \n",
     "**pymoo** offers to resume a run by serializing the algorithm object and loading it. Resuming runs from checkpoints is possible \n",
@@ -30,7 +41,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Functional"
    ]
@@ -45,7 +60,10 @@
      "iopub.status.idle": "2022-07-03T13:06:11.578802Z",
      "shell.execute_reply": "2022-07-03T13:06:11.577872Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -99,10 +117,9 @@
    ],
    "source": [
     "import dill\n",
-    "import numpy as np\n",
+    "from pymoo.problems import get_problem\n",
     "\n",
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
     "from pymoo.optimize import minimize\n",
     "from pymoo.termination.max_gen import MaximumGenerationTermination\n",
     "\n",
@@ -136,7 +153,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Object Oriented"
    ]
@@ -151,7 +172,10 @@
      "iopub.status.idle": "2022-07-03T13:06:14.611568Z",
      "shell.execute_reply": "2022-07-03T13:06:14.610921Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -209,13 +233,9 @@
    ],
    "source": [
     "import dill\n",
-    "import numpy as np\n",
     "\n",
     "from pymoo.algorithms.moo.nsga2 import NSGA2\n",
-    "from pymoo.factory import get_problem\n",
-    "from pymoo.factory import get_termination\n",
-    "from pymoo.optimize import minimize\n",
-    "from pymoo.visualization.scatter import Scatter\n",
+    "from pymoo.problems import get_problem\n",
     "\n",
     "problem = get_problem(\"zdt1\", n_var=5)\n",
     "\n",
@@ -242,14 +262,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## From a Text File"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "First, load the data from a file. Usually, this will include the variables `X`, the objective values `F` (and the constraints `G`). Here, they are created randomly. Always make sure the `Problem` you are solving would return the same values for the given `X` values. Otherwise the data might be misleading for the algorithm.\n",
     "\n",
@@ -266,7 +294,10 @@
      "iopub.status.idle": "2022-07-03T13:06:14.631741Z",
      "shell.execute_reply": "2022-07-03T13:06:14.630972Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -285,7 +316,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Then, create a population object using your data:"
    ]
@@ -300,7 +335,10 @@
      "iopub.status.idle": "2022-07-03T13:06:14.667964Z",
      "shell.execute_reply": "2022-07-03T13:06:14.667016Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -315,7 +353,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "And finally run it with a non-random initial population `sampling=pop`:"
    ]
@@ -330,7 +372,10 @@
      "iopub.status.idle": "2022-07-03T13:06:15.034403Z",
      "shell.execute_reply": "2022-07-03T13:06:15.033609Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
