--- a/docs/source/operators/repair.ipynb
+++ b/docs/source/operators/repair.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     ".. _nb_repair:"
@@ -11,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Repair\n",
     "\n",
@@ -20,7 +27,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "In the well-known **Knapsack Problem**. In this problem, a knapsack has to be filled with items without violating the maximum weight constraint. Each item $j$ has a value $b_j \\geq 0$  and a weight $w_j \\geq 0$ where $j \\in \\{1, .., m\\}$. The binary decision vector $z = (z_1, .., z_m)$ defines, if an item is picked or not. The aim is to maximize the profit $g(z)$:\n",
     "\n",
@@ -45,7 +56,10 @@
      "iopub.status.idle": "2022-07-03T13:28:40.787126Z",
      "shell.execute_reply": "2022-07-03T13:28:40.786339Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -75,7 +89,6 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_crossover, get_mutation, get_sampling\n",
     "from pymoo.operators.crossover.hux import HUX\n",
     "from pymoo.operators.mutation.bitflip import BitflipMutation\n",
     "from pymoo.operators.sampling.rnd import BinaryRandomSampling\n",
@@ -101,7 +114,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "\n",
     "Because the constraint $\\sum_{j=1}^m z_j \\, w_j \\leq Q$ is fairly easy to satisfy. Therefore, we can make sure that this constraint is not violated by repairing the individual before evaluating the objective function.\n",
@@ -118,7 +135,10 @@
      "iopub.status.idle": "2022-07-03T13:28:40.802919Z",
      "shell.execute_reply": "2022-07-03T13:28:40.802126Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -167,7 +187,10 @@
      "iopub.status.idle": "2022-07-03T13:28:41.195082Z",
      "shell.execute_reply": "2022-07-03T13:28:41.194423Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -225,7 +248,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "As demonstrated, the repair operator makes sure no infeasible solution is evaluated. Even though this example seems to be quite easy, the repair operator makes especially sense for more complex constraints where domain-specific knowledge is known."
    ]
