--- a/docs/source/problems/multi/tnk.ipynb
+++ b/docs/source/problems/multi/tnk.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "from pymoo.factory import get_problem\n",
+    "from pymoo.problems import get_problem\n",
     "from pymoo.util.plotting import plot\n",
     "\n",
     "problem = get_problem(\"tnk\")\n",
